<resources>
    <string name="app_name">Bester</string>
    <string name="welcome_text">播放器正在启动中...</string>
    <string name="skip">跳 过</string>
    <string name="local_video">本地视频</string>
    <string name="local_audio">本地音乐</string>
    <string name="net_video">网络视频</string>
    <string name="net_audio">网络音乐</string>
    <string name="text_search">资源搜索</string>
    <string name="no_video">没有找到视频...</string>
    <string name="text_loading">正在加载视频...</string>
    <string name="unknow_artist">未知艺术家</string>
    <string name="video_time">00:00</string>
    <string name="video_name">视频名.mp4</string>
    <string name="system_time">12:00</string>
    <string name="current_time">00:00</string>
    <string name="information">information</string>
    <string name="player_name">Bester播放器(推荐使用)</string>
    <string name="nonet">亲，您现在还没有网络哦...</string>
    <string name="video_desc">来自电影的简单描述</string>
    <string name="video_type">类型：动作、剧情、犯罪</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
