<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <ImageView
        android:id="@+id/iv_video_image"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/icon_local_video"/>
    <RelativeLayout
        android:layout_toRightOf="@id/iv_video_image"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        >
        <TextView
            android:id="@+id/tv_video_name"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/video_name"
            android:textColor="#99000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_video_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_video_name"
            android:layout_marginLeft="5dp"
            android:textSize="14sp"
            android:textColor="#66000000"
            android:text="@string/video_time"
            />
        <TextView
            android:id="@+id/tv_video_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:textColor="#66000000"
            android:text="@string/unknow_artist"

            />
        <TextView
            android:id="@+id/tv_video_size"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="5dp"
            android:textColor="#66000000"
            android:text="100.0 MB"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</RelativeLayout>