<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="5dp"
    android:gravity="center_vertical">
    <RelativeLayout
        android:id="@+id/rl_left"
        android:layout_width="120dp"
        android:layout_height="90dp"
        >
        <ImageView
            android:id="@+id/iv_net_video_image"
            android:src="@drawable/icon_local_video"
            android:scaleType="fitXY"
            android:layout_width="120dp"
            android:layout_height="90dp" />
        <ImageView
            android:id="@+id/btn_net_paly"
            android:background="@drawable/btn_net_paly_selector"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_toRightOf="@id/rl_left"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:paddingLeft="3dp"
        android:layout_marginRight="8dp">
        <TextView
            android:id="@+id/tv_net_video_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/video_name"
            android:layout_marginTop="8dp"
            android:textColor="#99000000"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_net_video_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/video_desc"
            android:textColor="#88000000"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tv_net_video_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/video_type"
            android:textColor="#88000000"
            android:textSize="12sp"
            />


        
    </LinearLayout>

</RelativeLayout>