<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/tv_information"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/information"
        android:background="@drawable/shape_textview_bg"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/system_state"
        android:background="#88000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/system_video_name"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#88ffffff"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:text="@string/video_name"/>
        <ImageView
            android:id="@+id/iv_battery"
            android:src="@drawable/ic_battery_20"
            android:layout_width="40dp"
            android:layout_height="20dp"
            />
        <TextView
            android:id="@+id/tv_time"
            android:textColor="#88ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:textSize="18sp"
            android:text="@string/system_time"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sound"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/shape_seekbar_bg"
        android:visibility="gone">
        <ImageButton
            android:id="@+id/btn_sound"
            android:background="@drawable/btn_sound_selector"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            />
        <SeekBar
            android:id="@+id/sound_seekbar"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:maxHeight="6dp"
            android:minHeight="6dp"
            android:thumb="@drawable/progress_thumb"
            android:progressDrawable="@drawable/progress_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_light"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/shape_seekbar_bg"
        android:visibility="gone">
        <ImageButton
            android:id="@+id/btn_light"
            android:background="@drawable/btn_light"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            />
        <SeekBar
            android:id="@+id/light_seekbar"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:maxHeight="6dp"
            android:minHeight="6dp"
            android:thumb="@drawable/progress_thumb"
            android:progressDrawable="@drawable/progress_horizontal"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/bottom_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_player_bottom_seekbar">
            <TextView
                android:id="@+id/tv_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_time"
                android:layout_marginLeft="8dp"
                android:textColor="#99ffffff"/>
            <SeekBar
                android:id="@+id/progress_control"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:maxHeight="6dp"
                android:minHeight="6dp"
                android:thumb="@drawable/progress_thumb"
                android:progressDrawable="@drawable/progress_horizontal"
                />
            <TextView
                android:id="@+id/video_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_time"
                android:layout_marginRight="8dp"
                android:textColor="#99ffffff"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_player_bottom_control">
            <Button
                android:id="@+id/btn_back"
                android:layout_weight="1"
                android:background="@drawable/btn_back_selector"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                />
            <Button
                android:id="@+id/btn_pre_big"
                android:layout_weight="1"
                android:background="@drawable/btn_pre_big_selector"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
            <Button
                android:id="@+id/btn_play_or_pause"
                android:layout_weight="1"
                android:background="@drawable/btn_pause_selector"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
            <Button
                android:id="@+id/btn_next_big"
                android:layout_weight="1"
                android:background="@drawable/btn_next_big_selector"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
            <Button
                android:id="@+id/btn_fullscreen"
                android:layout_weight="1"
                android:background="@drawable/btn_fullscreen_selector"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>